--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "sequelize": "^6.1.0"
+    "sequelize": "^6.1.0",
+    "sqlite3": "^4.2.0"
   }
 }
