--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "sequelize": "^6.1.0",
-    "sqlite3": "^4.2.0"
+    "mongoose": "^5.9.25"
   }
 }
