--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/UI/audio-repo/node_modules
+/ui/node_modules
+/ui/build
 /server/node_modules
 /server/db/store.db
 /server/.env
